--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "objectid-to-timestamp": "1.3.0",
     "sha1": "1.1.1",
     "winston": "2.2.0",
-    "element-ui": "^1.0.0"
+    "element-ui": "^1.0.0",
+    "socket.io": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
